--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <ul>
     <li><a href="wed%20flower/web/index.html" target="_blank">Wed Flower (Static Website)</a></li>
     <li><a href="ConnectFour/index.php" target="_blank">ConnectFour (PHP/MySQL - run locally)</a></li>
-    <li><a href="Zudo/index.html" target="_blank">Zudo (PHP/MySQL - run locally)</a></li>
+    <li><a href="Zudo/index.php" target="_blank">Zudo (PHP/MySQL - run locally)</a></li>
   </ul>
   <center>
     <p>Note: Projects using PHP/MySQL require a local server (XAMPP/WAMP) to run.</p>
